--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
+	<title>Start Page</title>
 	<meta charset="UTF-8">
-	<title>Clock</title>
-	<link rel="stylesheet" href="css/common.css">
+	<meta name=description content="">
+	<meta name=viewport content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="assets/css/bootstrap.css" rel="stylesheet" media="screen">
+	<link href="assets/css/theme.css" rel="stylesheet" media="screen">
+	<link rel="stylesheet" href="assets/css/animate.css">
 </head>
 <body>
 	<section class="clock">
-		<time class="hm"><span id="numH">00</span><span id="blink">:</span><span id="numM">00</span></time>
-		<time class="dw" id="dw">hogehoge</time>
+		<time class="hm fade-in-6"><span id="numH">00</span><span id="blink">:</span><span id="numM">00</span></time>
+		<time class="dw fade-in-7" id="dw">hogehoge</time>
 	</section>
 	<section class="schedule">
 		<ol>
@@ -30,34 +35,48 @@
 		<ul>
 			<li>
 				<time>00</time>
-				<img src="Sunny.svg" alt="sunny">
+				<div class="icon">
+					<img src="assets/img/Sunny.svg" alt="sunny">
+				</div>
 				<span class="temp-c">10℃</span>
 			</li>
 			<li>
 				<time>06</time>
-				<img src="Sunny.svg" alt="sunny">
+				<div class="icon">
+					<img src="assets/img/Sunny.svg" alt="sunny">
+				</div>
 				<span class="temp-c">10℃</span>
 			</li>
 			<li>
 				<time>12</time>
-				<img src="Rainy.svg" alt="rainy">
+				<div class="icon">
+					<img src="assets/img/Rainy.svg" alt="rainy">
+				</div>
 				<span class="temp-c">10℃</span>
 			</li>
 			<li>
 				<time>18</time>
-				<img src="Cloudy.svg" alt="cloudy">
+				<div class="icon">
+					<img src="assets/img/Cloudy.svg" alt="cloudy">
+				</div>
 				<span class="temp-c">10℃</span>
 			</li>
 			<li>
 				<time>24</time>
-				<img src="Sunny.svg" alt="sunny">
+				<div class="icon">
+					<img src="assets/img/Sunny.svg" alt="sunny">
+				</div>
 				<span class="temp-c">10℃</span>
 			</li>
 		</ul>
 	</section>
+	
 	<!-- special thanks
 	<a href="http://www.sketchappsources.com/free-source/423-weather-icons.html">Weather Icons Sketch freebie - Download free resource for Sketch 3- Sketch App Sources</a>
 	<a href="http://www.sketchappsources.com/free-source/423-weather-icons.html">Weather Icons Sketch freebie - Download free resource for Sketch 3- Sketch App Sources</a> -->
-	<script src="wall.js"></script>
+
+	<script src="http://code.jquery.com/jquery.js"></script>
+	<script src="assets/js/bootstrap.min.js"></script>
+	<script src="assets/js/wall.js"></script>
 </body>
 </html>
