色やアニメーションの変化ができた

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<time class="hm fade-in-6"><span id="numH">00</span><span id="blink">:</span><span id="numM">00</span></time>
 		<time class="dw fade-in-7" id="dw">hogehoge</time>
 	</section>
-	<section class="schedule">
+	<section class="schedule fade-in-6">
 		<ol>
 			<li>
 				<time>16:00</time> 定休日
