天気情報表示

--- a/index.html
+++ b/index.html
@@ -34,39 +34,32 @@
 	<section class="temparature">
 		<ul>
 			<li>
-				<time>00</time>
+				<time>00<small>h</small></time>
 				<div class="icon">
-					<img src="assets/img/Sunny.svg" alt="sunny">
+					<img src="assets/img" alt="sunny">
 				</div>
-				<span class="temp-c">10℃</span>
+				<span class="rainfall">can't loading</span>
 			</li>
 			<li>
-				<time>06</time>
+				<time>06<small>h</small></time>
 				<div class="icon">
-					<img src="assets/img/Sunny.svg" alt="sunny">
+					<img src="assets/img/" alt="sunny">
 				</div>
-				<span class="temp-c">10℃</span>
+				<span class="rainfall">can't loading</span>
 			</li>
 			<li>
-				<time>12</time>
+				<time>12<small>h</small></time>
 				<div class="icon">
-					<img src="assets/img/Rainy.svg" alt="rainy">
+					<img src="assets/img/" alt="rainy">
 				</div>
-				<span class="temp-c">10℃</span>
+				<span class="rainfall">can't loading</span>
 			</li>
 			<li>
-				<time>18</time>
+				<time>18<small>h</small></time>
 				<div class="icon">
-					<img src="assets/img/Cloudy.svg" alt="cloudy">
+					<img src="assets/img/" alt="cloudy">
 				</div>
-				<span class="temp-c">10℃</span>
-			</li>
-			<li>
-				<time>24</time>
-				<div class="icon">
-					<img src="assets/img/Sunny.svg" alt="sunny">
-				</div>
-				<span class="temp-c">10℃</span>
+				<span class="rainfall">can't loading</span>
 			</li>
 		</ul>
 	</section>
@@ -78,5 +71,7 @@
 	<script src="http://code.jquery.com/jquery.js"></script>
 	<script src="assets/js/bootstrap.min.js"></script>
 	<script src="assets/js/wall.js"></script>
+	<script src="http://www.drk7.jp/weather/json/13.js">
+	</script>
 </body>
 </html>
