レスポンシブ調整

--- a/index.html
+++ b/index.html
@@ -31,33 +31,33 @@
 			</li>
 		</ol>
 	</section>
-	<section class="temparature">
+	<section class="weather">
 		<ul>
 			<li>
 				<time>00<small>h</small></time>
 				<div class="icon">
-					<img src="assets/img" alt="sunny">
+					<img src="" alt="sunny">
 				</div>
 				<span class="rainfall">can't loading</span>
 			</li>
 			<li>
 				<time>06<small>h</small></time>
 				<div class="icon">
-					<img src="assets/img/" alt="sunny">
+					<img src="" alt="sunny">
 				</div>
 				<span class="rainfall">can't loading</span>
 			</li>
 			<li>
 				<time>12<small>h</small></time>
 				<div class="icon">
-					<img src="assets/img/" alt="rainy">
+					<img src="" alt="rainy">
 				</div>
 				<span class="rainfall">can't loading</span>
 			</li>
 			<li>
-				<time>18<small>h</small></time>
+				<time>18</time>
 				<div class="icon">
-					<img src="assets/img/" alt="cloudy">
+					<img src="" alt="cloudy">
 				</div>
 				<span class="rainfall">can't loading</span>
 			</li>
