--- a/index.html
+++ b/index.html
@@ -1,18 +1,29 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-	<title>Start Page</title>
 	<meta charset="UTF-8">
-	<meta name=description content="">
-	<meta name=viewport content="width=device-width, initial-scale=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="assets/css/bootstrap.css" rel="stylesheet" media="screen">
-	<link href="assets/css/theme.css" rel="stylesheet" media="screen">
-	<link rel="stylesheet" href="assets/css/animate.css">
+	<meta content="Start Wall" name="title">
+	<meta content="時間はもちろんお住いの地域の天気が分かるちょっとおしゃれでシンプルなスタートページです。" name="description">
+	<meta content='時計,気温,javascript,css3,アニメーション' name='keywords'>
+	<!-- ogp -->
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="Start Wall">
+	<meta property="og:description" content="時間はもちろんお住いの地域の天気が分かるちょっとおしゃれでシンプルなスタートページです。">
+	<meta property="og:image" content="">
+	<meta property="og:url" content="">
+	<meta property="og:site_name" content="StartWall">
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:creator" content="@woopsdez">
+	<!-- ogp -->
+	<title>Start Page</title>
+	<!-- <link href="assets/css/bootstrap.css" rel="stylesheet" media="screen"> -->
+	<!-- 	<link href="assets/css/lib-animate.css" rel="stylesheet" media="screen"> -->
+	<link href="assets/css/screen.css" rel="stylesheet" media="screen">
 </head>
 <body>
 	<div class="bg">
-		<img src="assets/img/rotateGround.png">
+		<img src="assets/img/rotateGround-white.png">
 	</div>
 	<div class="setting">
 		<form action="">
@@ -88,22 +99,7 @@
 			<time class="hm fade-in-6"><span id="numH">00</span><span id="blink">:</span><span id="numM">00</span></time>
 			<time class="dw fade-in-7" id="dw">hogehoge</time>
 		</section>
-		<section class="schedule fade-in-6">
-			<ol>
-				<li>
-					<time>16:00</time> 定休日
-				</li>
-				<li>
-					<time>18:00</time> 定休日
-				</li>
-				<li>
-					<time>21:00</time> 定休日
-				</li>
-				<li>
-					<time>23:00</time> 定休日
-				</li>
-			</ol>
-		</section>
+		
 		<section class="weather">
 			<ul>
 				<li>
