天気アイコンをwebfontに

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	<!-- ogp -->
 	<title>Start Page</title>
 	<link href="assets/css/screen.css" rel="stylesheet" media="screen">
+	<link href="assets/css/weather-icons.css" rel="stylesheet" media="screen">
 </head>
 <body>
 	<div class="bg">
@@ -134,42 +135,29 @@
 			<ul>
 				<li>
 					<time>00<small>h</small></time>
-					<div class="icon">
-						<img src="">
-					</div>
+					<i class="wi wi-day-sunny"></i>
 					<span class="rainfall">can't loading</span>
 				</li>
 				<li>
 					<time>06<small>h</small></time>
-					<div class="icon">
-						<img src="">
-					</div>
+					<i class="wi wi-day-sunny"></i>
 					<span class="rainfall">can't loading</span>
 				</li>
 				<li>
 					<time>12<small>h</small></time>
-					<div class="icon">
-						<img src="">
-					</div>
+					<i class="wi wi-day-sunny"></i>
 					<span class="rainfall">can't loading</span>
 				</li>
 				<li>
 					<time>18<small>h</small></time>
-					<div class="icon">
-						<img src="">
-					</div>
+					<i class="wi wi-day-sunny"></i>
 					<span class="rainfall">can't loading</span>
 				</li>
 			</ul>
 		</section>
 	</div>
 	
-	<!-- special thanks
-	<a href="http://www.sketchappsources.com/free-source/423-weather-icons.html">Weather Icons Sketch freebie - Download free resource for Sketch 3- Sketch App Sources</a>
-	<a href="http://www.sketchappsources.com/free-source/423-weather-icons.html">Weather Icons Sketch freebie - Download free resource for Sketch 3- Sketch App Sources</a> -->
-
 	<script src="http://code.jquery.com/jquery.js"></script>
-	<script src="assets/js/bootstrap.min.js"></script>
 	<script src="assets/js/wall.js"></script>
 	<script src="http://www.drk7.jp/weather/json/13.js"></script>
 </body>
