ブラウザ互換向上

--- a/index.html
+++ b/index.html
@@ -25,99 +25,106 @@
 		<img src="assets/img/rotateGround-white.png">
 	</div>
 	<section class="setting">
-		<section class="area">
-			<h2>Area Setting</h2>
-			<form id="setArea" action="">
-			<select id="pref" name="pref">
-				<optgroup label="北海道・東北">
-					<option value="01">北海道</option>
-					<option value="02">青森県</option>
-					<option value="03">岩手県</option>
-					<option value="04">宮城県</option>
-					<option value="05">秋田県</option>
-					<option value="06">山形県</option>
-					<option value="07">福島県</option>
-				</optgroup>
-				<optgroup label="関東">
-					<option value="08">茨城県</option>
-					<option value="09">栃木県</option>
-					<option value="10">群馬県</option>
-					<option value="11">埼玉県</option>
-					<option value="12">千葉県</option>
-					<option value="13" selected>東京都</option>
-					<option value="14">神奈川県</option>
-				</optgroup>
-				<optgroup label="甲信越・北陸">
-					<option value="15">新潟県</option>
-					<option value="16">富山県</option>
-					<option value="17">石川県</option>
-					<option value="18">福井県</option>
-					<option value="19">山梨県</option>
-					<option value="20">長野県</option>
-				</optgroup>
-				<optgroup label="東海">
-					<option value="21">岐阜県</option>
-					<option value="22">静岡県</option>
-					<option value="23">愛知県</option>
-					<option value="24">三重県</option>
-				</optgroup>
-				<optgroup label="関西">
-					<option value="25">滋賀県</option>
-					<option value="26">京都府</option>
-					<option value="27">大阪府</option>
-					<option value="28">兵庫県</option>
-					<option value="29">奈良県</option>
-					<option value="30">和歌山県</option>
-				</optgroup>
-				<optgroup label="中国">
-					<option value="31">鳥取県</option>
-					<option value="32">島根県</option>
-					<option value="33">岡山県</option>
-					<option value="34">広島県</option>
-					<option value="35">山口県</option>
-				</optgroup>
-				<optgroup label="四国">
-					<option value="36">徳島県</option>
-					<option value="37">香川県</option>
-					<option value="38">愛媛県</option>
-					<option value="39">高知県</option>
-				</optgroup>
-				<optgroup label="九州・沖縄">
-					<option value="40">福岡県</option>
-					<option value="41">佐賀県</option>
-					<option value="42">長崎県</option>
-					<option value="43">熊本県</option>
-					<option value="44">大分県</option>
-					<option value="45">宮崎県</option>
-					<option value="46">鹿児島県</option>
-					<option value="47">沖縄県</option>
-				</optgroup>
-			</select>
-		</form>
-		</section>
-		
-		<section class="style">
-			<h2>Style Setting</h2>
-			<form class="column-2" id="textColor" action="">
-				<input type="button" id="textWhite" value="white">
-				<input type="button" id="textBlack" value="black">
+		<div class="wrapper">
+			<section class="area">
+				<h2>Area Setting</h2>
+				<form id="setArea" action="">
+				<select id="pref" name="pref">
+					<optgroup label="北海道・東北">
+						<option value="01">北海道</option>
+						<option value="02">青森県</option>
+						<option value="03">岩手県</option>
+						<option value="04">宮城県</option>
+						<option value="05">秋田県</option>
+						<option value="06">山形県</option>
+						<option value="07">福島県</option>
+					</optgroup>
+					<optgroup label="関東">
+						<option value="08">茨城県</option>
+						<option value="09">栃木県</option>
+						<option value="10">群馬県</option>
+						<option value="11">埼玉県</option>
+						<option value="12">千葉県</option>
+						<option value="13" selected>東京都</option>
+						<option value="14">神奈川県</option>
+					</optgroup>
+					<optgroup label="甲信越・北陸">
+						<option value="15">新潟県</option>
+						<option value="16">富山県</option>
+						<option value="17">石川県</option>
+						<option value="18">福井県</option>
+						<option value="19">山梨県</option>
+						<option value="20">長野県</option>
+					</optgroup>
+					<optgroup label="東海">
+						<option value="21">岐阜県</option>
+						<option value="22">静岡県</option>
+						<option value="23">愛知県</option>
+						<option value="24">三重県</option>
+					</optgroup>
+					<optgroup label="関西">
+						<option value="25">滋賀県</option>
+						<option value="26">京都府</option>
+						<option value="27">大阪府</option>
+						<option value="28">兵庫県</option>
+						<option value="29">奈良県</option>
+						<option value="30">和歌山県</option>
+					</optgroup>
+					<optgroup label="中国">
+						<option value="31">鳥取県</option>
+						<option value="32">島根県</option>
+						<option value="33">岡山県</option>
+						<option value="34">広島県</option>
+						<option value="35">山口県</option>
+					</optgroup>
+					<optgroup label="四国">
+						<option value="36">徳島県</option>
+						<option value="37">香川県</option>
+						<option value="38">愛媛県</option>
+						<option value="39">高知県</option>
+					</optgroup>
+					<optgroup label="九州・沖縄">
+						<option value="40">福岡県</option>
+						<option value="41">佐賀県</option>
+						<option value="42">長崎県</option>
+						<option value="43">熊本県</option>
+						<option value="44">大分県</option>
+						<option value="45">宮崎県</option>
+						<option value="46">鹿児島県</option>
+						<option value="47">沖縄県</option>
+					</optgroup>
+				</select>
 			</form>
-
-			<select name="" id="selectFont">
-				<option value="HelveticaNeue-UltraLight">Helvetica Ultra Light</option>
-				<option value="Montserrat">Montserrat</option>
-				<option value="Lato">Lato</option>
-				<option value="Open Sans">Open Sans</option>
-				<option value="Playfair Display">Playfair Display</option>
-				<option value="Alegreya">Alegreya</option>
-			</select>
-		</section>
-
-		<section class="set-startpage">
-			<form action="">
-				<input type="submit" value="Set in your browser">
-			</form>
-		</section>
+			</section>
+			
+			<section class="style">
+				<h2>Style Setting</h2>
+				<form class="column-2" id="textColor" action="">
+					<ul>
+						<li>
+							<input type="radio" name="textColor" id="textWhite" value="white"><label for="textWhite"><span>White</span></label>
+						</li>
+						<li>
+							<input type="radio" name="textColor" id="textBlack" value="black"><label for="textBlack"><span>Black</span></label>
+						</li>
+					</ul>
+				</form>
+			
+				<select name="" id="selectFont">
+					<option value="HelveticaNeue-UltraLight">Helvetica Ultra Light</option>
+					<option value="Montserrat">Montserrat</option>
+					<option value="Lato">Lato</option>
+					<option value="Open Sans">Open Sans</option>
+					<option value="Playfair Display">Playfair Display</option>
+					<option value="Alegreya">Alegreya</option>
+				</select>
+			</section>
+			
+			<!-- <section class="set-startpage">
+				<form action="">
+					<input type="submit" value="Set in your browser">
+				</form>
+			</section> --></div>
 
 		<footer>
 			&copy; <a href="http://mikiishijima.com">Miki Ishijima</a> 2016
