サイドバーのサイズをスマートフォンでもはみでないように変更

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 	
 	<script src="http://code.jquery.com/jquery.js"></script>
 	<script src="assets/js/jp-prefecture.min.js"></script>
-	<script src="assets/js/wall.js"></script>
+	<script src="assets/js/floaty-color-clock.js"></script>
 	<script src="http://www.drk7.jp/weather/json/13.js"></script>
 </body>
 </html>
