アニメーションを調整

--- a/index.html
+++ b/index.html
@@ -134,14 +134,15 @@
 
 	<div class="detail" id="target">
 		<section class="clock">
-			<time class="hm fade-in-6"><span id="numH">00</span><span id="blink">:</span><span id="numM">00</span></time>
-			<div class="hanging">
-				<time class="dw fade-in-7" id="dw">hogehoge</time>
-				<span class="ar fade-in-8" id="areaName"><small>fugafuga</small></span>
+			<time class="hm fadein"><span id="numH">00</span><span id="blink">:</span><span id="numM">00</span></time>
+			<div class="hanging fadein">
+				<time class="dw" id="dw">hogehoge</time>
+				<span class="ar" id="areaName"><small>fugafuga</small></span>
 			</div>
 		</section>
 		
 		<section class="weather">
+			<div class="liner"></div>
 			<ul>
 				<li>
 					<time>00<small>h</small></time>
