画像の黒も用意

--- a/index.html
+++ b/index.html
@@ -30,72 +30,72 @@
 			<section class="area">
 				<h2>Area Setting</h2>
 				<form id="setArea" action="">
-				<select id="pref" name="pref">
-					<optgroup label="北海道・東北">
-						<option value="01">北海道</option>
-						<option value="02">青森県</option>
-						<option value="03">岩手県</option>
-						<option value="04">宮城県</option>
-						<option value="05">秋田県</option>
-						<option value="06">山形県</option>
-						<option value="07">福島県</option>
-					</optgroup>
-					<optgroup label="関東">
-						<option value="08">茨城県</option>
-						<option value="09">栃木県</option>
-						<option value="10">群馬県</option>
-						<option value="11">埼玉県</option>
-						<option value="12">千葉県</option>
-						<option value="13" selected>東京都</option>
-						<option value="14">神奈川県</option>
-					</optgroup>
-					<optgroup label="甲信越・北陸">
-						<option value="15">新潟県</option>
-						<option value="16">富山県</option>
-						<option value="17">石川県</option>
-						<option value="18">福井県</option>
-						<option value="19">山梨県</option>
-						<option value="20">長野県</option>
-					</optgroup>
-					<optgroup label="東海">
-						<option value="21">岐阜県</option>
-						<option value="22">静岡県</option>
-						<option value="23">愛知県</option>
-						<option value="24">三重県</option>
-					</optgroup>
-					<optgroup label="関西">
-						<option value="25">滋賀県</option>
-						<option value="26">京都府</option>
-						<option value="27">大阪府</option>
-						<option value="28">兵庫県</option>
-						<option value="29">奈良県</option>
-						<option value="30">和歌山県</option>
-					</optgroup>
-					<optgroup label="中国">
-						<option value="31">鳥取県</option>
-						<option value="32">島根県</option>
-						<option value="33">岡山県</option>
-						<option value="34">広島県</option>
-						<option value="35">山口県</option>
-					</optgroup>
-					<optgroup label="四国">
-						<option value="36">徳島県</option>
-						<option value="37">香川県</option>
-						<option value="38">愛媛県</option>
-						<option value="39">高知県</option>
-					</optgroup>
-					<optgroup label="九州・沖縄">
-						<option value="40">福岡県</option>
-						<option value="41">佐賀県</option>
-						<option value="42">長崎県</option>
-						<option value="43">熊本県</option>
-						<option value="44">大分県</option>
-						<option value="45">宮崎県</option>
-						<option value="46">鹿児島県</option>
-						<option value="47">沖縄県</option>
-					</optgroup>
-				</select>
-			</form>
+					<select id="pref" name="pref">
+						<optgroup label="北海道・東北">
+							<option value="01">北海道</option>
+							<option value="02">青森県</option>
+							<option value="03">岩手県</option>
+							<option value="04">宮城県</option>
+							<option value="05">秋田県</option>
+							<option value="06">山形県</option>
+							<option value="07">福島県</option>
+						</optgroup>
+						<optgroup label="関東">
+							<option value="08">茨城県</option>
+							<option value="09">栃木県</option>
+							<option value="10">群馬県</option>
+							<option value="11">埼玉県</option>
+							<option value="12">千葉県</option>
+							<option value="13" selected>東京都</option>
+							<option value="14">神奈川県</option>
+						</optgroup>
+						<optgroup label="甲信越・北陸">
+							<option value="15">新潟県</option>
+							<option value="16">富山県</option>
+							<option value="17">石川県</option>
+							<option value="18">福井県</option>
+							<option value="19">山梨県</option>
+							<option value="20">長野県</option>
+						</optgroup>
+						<optgroup label="東海">
+							<option value="21">岐阜県</option>
+							<option value="22">静岡県</option>
+							<option value="23">愛知県</option>
+							<option value="24">三重県</option>
+						</optgroup>
+						<optgroup label="関西">
+							<option value="25">滋賀県</option>
+							<option value="26">京都府</option>
+							<option value="27">大阪府</option>
+							<option value="28">兵庫県</option>
+							<option value="29">奈良県</option>
+							<option value="30">和歌山県</option>
+						</optgroup>
+						<optgroup label="中国">
+							<option value="31">鳥取県</option>
+							<option value="32">島根県</option>
+							<option value="33">岡山県</option>
+							<option value="34">広島県</option>
+							<option value="35">山口県</option>
+						</optgroup>
+						<optgroup label="四国">
+							<option value="36">徳島県</option>
+							<option value="37">香川県</option>
+							<option value="38">愛媛県</option>
+							<option value="39">高知県</option>
+						</optgroup>
+						<optgroup label="九州・沖縄">
+							<option value="40">福岡県</option>
+							<option value="41">佐賀県</option>
+							<option value="42">長崎県</option>
+							<option value="43">熊本県</option>
+							<option value="44">大分県</option>
+							<option value="45">宮崎県</option>
+							<option value="46">鹿児島県</option>
+							<option value="47">沖縄県</option>
+						</optgroup>
+					</select>
+				</form>
 			</section>
 			
 			<section class="style">
@@ -110,7 +110,7 @@
 						</li>
 					</ul>
 				</form>
-			
+
 				<select name="" id="selectFont">
 					<option value="HelveticaNeue-UltraLight">Helvetica Ultra Light</option>
 					<option value="Montserrat">Montserrat</option>
@@ -127,57 +127,61 @@
 				</form>
 			</section> --></div>
 
-		<footer>
-			&copy; <a href="http://mikiishijima.com">Miki Ishijima</a> 2016
-		</footer>
-	</section>
+			<footer>
+				&copy; <a href="http://mikiishijima.com">Miki Ishijima</a> 2016
+			</footer>
+		</section>
 
-	<div class="detail" id="target">
-		<section class="clock">
-			<time class="hm fadein"><span id="numH">00</span><span id="blink">:</span><span id="numM">00</span></time>
-			<div class="hanging fadein">
-				<time class="dw" id="dw">hogehoge</time>
-				<span class="ar" id="areaName"><small>fugafuga</small></span>
+		<div class="detail" id="target">
+			<section class="clock">
+				<time class="hm fadein"><span id="numH">00</span><span id="blink">:</span><span id="numM">00</span></time>
+				<div class="hanging fadein">
+					<time class="dw" id="dw">hogehoge</time>
+					<span class="ar" id="areaName"><small>fugafuga</small></span>
+				</div>
+			</section>
+
+			<section class="weather">
+				<div class="liner"></div>
+				<ul>
+					<li>
+						<time>00<small>h</small></time>
+						<i class="wi wi-day-sunny"></i>
+						<span class="rainfall">can't loading</span>
+					</li>
+					<li>
+						<time>06<small>h</small></time>
+						<i class="wi wi-day-sunny"></i>
+						<span class="rainfall">can't loading</span>
+					</li>
+					<li>
+						<time>12<small>h</small></time>
+						<i class="wi wi-day-sunny"></i>
+						<span class="rainfall">can't loading</span>
+					</li>
+					<li>
+						<time>18<small>h</small></time>
+						<i class="wi wi-day-sunny"></i>
+						<span class="rainfall">can't loading</span>
+					</li>
+				</ul>
+			</section>
+
+			<div class="name">
+				<i class="fa fa-clock-o"></i> Floaty Color Clock
 			</div>
-		</section>
-		
-		<section class="weather">
-			<div class="liner"></div>
-			<ul>
-				<li>
-					<time>00<small>h</small></time>
-					<i class="wi wi-day-sunny"></i>
-					<span class="rainfall">can't loading</span>
-				</li>
-				<li>
-					<time>06<small>h</small></time>
-					<i class="wi wi-day-sunny"></i>
-					<span class="rainfall">can't loading</span>
-				</li>
-				<li>
-					<time>12<small>h</small></time>
-					<i class="wi wi-day-sunny"></i>
-					<span class="rainfall">can't loading</span>
-				</li>
-				<li>
-					<time>18<small>h</small></time>
-					<i class="wi wi-day-sunny"></i>
-					<span class="rainfall">can't loading</span>
-				</li>
-			</ul>
-		</section>
-	</div>
 
-<a href="" class="btn-fullscreen" id="fullscreenSwitch" onclick="requestFullscreen()">
-	<span class="fa-stack fa-lg">
-	  <i class="fa fa-square fa-stack-2x"></i>
-	  <i class="fa fa-expand fa-stack-1x fa-inverse"></i>
-	</span>
-</a>
-	
-	<script src="http://code.jquery.com/jquery.js"></script>
-	<script src="assets/js/jp-prefecture.min.js"></script>
-	<script src="assets/js/floaty-color-clock.js"></script>
-	<script src="http://www.drk7.jp/weather/json/13.js"></script>
-</body>
-</html>
+			<a href="" class="btn-fullscreen" id="fullscreenSwitch" onclick="requestFullscreen()">
+				<span class="fa-stack fa-lg">
+					<i class="fa fa-square fa-stack-2x"></i>
+					<i class="fa fa-expand fa-stack-1x fa-inverse"></i>
+				</span>
+			</a>
+		</div>
+
+		<script src="http://code.jquery.com/jquery.js"></script>
+		<script src="assets/js/jp-prefecture.min.js"></script>
+		<script src="assets/js/floaty-color-clock.js"></script>
+		<script src="http://www.drk7.jp/weather/json/13.js"></script>
+	</body>
+	</html>
