背景画像追加

--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta content="Start Wall" name="title">
-	<meta content="時間はもちろんお住いの地域の天気が分かるちょっとおしゃれでシンプルなスタートページです。" name="description">
-	<meta content='時計,気温,javascript,css3,アニメーション' name='keywords'>
+	<meta content="Floaty Color Colock" name="title">
+	<meta content="Can be seen the weather in your area, not to mention a clock. It is a little pretty start page." name="description">
+	<meta content='clock,temperature,startpage' name='keywords'>
 	<!-- ogp -->
 	<meta property="og:type" content="website">
-	<meta property="og:title" content="Start Wall">
-	<meta property="og:description" content="時間はもちろんお住いの地域の天気が分かるちょっとおしゃれでシンプルなスタートページです。">
-	<meta property="og:image" content="">
-	<meta property="og:url" content="">
-	<meta property="og:site_name" content="StartWall">
+	<meta property="og:title" content="Floaty Color Colock">
+	<meta property="og:description" content="Can be seen the weather in your area, not to mention a clock. It is a little pretty start page.">
+	<meta property="og:image" content="http://woopsdez.jp/assets/img/ogp-fcc.png">
+	<meta property="og:url" content="http://woopsdez.jp/floaty-color-clock/">
+	<meta property="og:site_name" content="Floaty Color Colock">
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:creator" content="@woopsdez">
 	<!-- ogp -->
@@ -120,12 +120,21 @@
 					<option value="Alegreya">Alegreya</option>
 				</select>
 			</section>
+
+			<section>
+				<ul class="btn-social">
+					<li><a href="http://twitter.com/share?text=http://woopsdez.jp/floaty-color-clock/" onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;"><i class="fa fa-twitter"></i></a></li>
+					<li><a href="https://www.facebook.com/sharer/sharer.php?u=http://woopsdez.jp/floaty-color-clock/" onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;"><i class="fa fa-facebook"></i></a></li>
+					<li><a href="https://github.com/woopsdez/woopsdez_start_wall/" class="github" target="_blank"><i class="fa fa-github-alt"></i></a></li>
+				</ul>
+			</section>
 			
 			<!-- <section class="set-startpage">
 				<form action="">
 					<input type="submit" value="Set in your browser">
 				</form>
-			</section> --></div>
+			</section> -->
+		</div>
 
 			<footer>
 				&copy; <a href="http://mikiishijima.com">Miki Ishijima</a> 2016
