読み込み速度調整

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 			</a>
 		</div>
 
-		<script src="http://code.jquery.com/jquery.js"></script>
+		<script   src="https://code.jquery.com/jquery-1.12.3.min.js"   integrity="sha256-aaODHAgvwQW1bFOGXMeX+pC4PZIPsvn2h1sArYOhgXQ="   crossorigin="anonymous"></script>
 		<script src="assets/js/jp-prefecture.min.js"></script>
 		<script src="assets/js/floaty-color-clock.js"></script>
 		<script src="http://www.drk7.jp/weather/json/13.js"></script>
