iOSフルスクリーン設定

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta content="Floaty Color Colock" name="title">
 	<meta content="Can be seen the weather in your area, not to mention a clock. It is a little pretty start page." name="description">
 	<meta content='clock,temperature,startpage' name='keywords'>
